# secure-scanner

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: scan.yml  secure-scanner.yml
scanner/: api.py  cli.py  core.py  dependency_check.py
scanner/analyzers/: __init__.py  python_ast.py  python_dangerous_funcs.py  python_sql_injection.py
scanner/formatters/: sarif.py
tests/test_samples/: vulnerable.py
